--- a/app/src/main/res/layout/item_unsplash_photo.xml
+++ b/app/src/main/res/layout/item_unsplash_photo.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="250dp">
+    android:layout_height="250dp"
+    android:layout_margin="5dp">
 
     <ImageView
         android:id="@+id/image_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <View
+        android:id="@+id/view"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_alignBottom="@id/image_view"
-        android:background="@drawable/gradient" />
+        android:background="@drawable/gradient"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/image_view"/>
 
     <TextView
         android:id="@+id/text_view_user_name"
@@ -28,6 +36,8 @@
         android:maxLines="1"
         android:textColor="#fff"
         app:drawableStartCompat="@drawable/ic_user"
-        tools:text="username" />
+        tools:text="username"
+        app:layout_constraintStart_toStartOf="@+id/view"
+        app:layout_constraintBottom_toBottomOf="@+id/view" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
